--- a/webAlgoUI/templates/main_algo_template.html
+++ b/webAlgoUI/templates/main_algo_template.html
@@ -1,4 +1,4 @@
 {% extends "base_template.html" %}
 {% block body %}
-    Here will be the main page with different algorithms selection
+    Here will be the main page with different options of the selected algorithm
 {% endblock %}
