added css, js required files. Created fake dictionaries with data. Refactored function names inside the AlgorithmsInterface class. Implemented algo_db_settings template which will be rendered with data received from interface. It will be processed using AJAX.

--- a/webAlgoUI/templates/main_algo_template.html
+++ b/webAlgoUI/templates/main_algo_template.html
@@ -1,4 +1,27 @@
 {% extends "base_template.html" %}
 {% block body %}
-    Here will be the main page with different options of the selected algorithm
+    <div id="algo_db_settings">
+        <p id="settings_caption">Select Algorithm and DB to get their settings...</p>
+    </div>
+{% endblock %}
+{% block sctipts %}
+    <script>
+        $('#algo_db_select_button').on('click', function (e) {
+            e.preventDefault();
+            $('#settings_caption').text('Getting settings for selected algorithm and DB...');
+            var form = $('#algo_db_form_id');
+            $.ajax({
+                url: form.attr('action'),
+                data: form.serialize(),
+                type: form.attr('method'),
+                success: function (response) {
+                    console.log(response);
+                    $('#algo_db_settings').html(response);
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        });
+    </script>
 {% endblock %}
