--- a/webAlgoUI/templates/base_template.html
+++ b/webAlgoUI/templates/base_template.html
@@ -1,29 +1,33 @@
 <!doctype html>
 <title>Web Algo UI</title>
+<script src="{{ url_for('static', filename='js/jquery-2.1.3.min.js') }}"></script>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 <div class="page">
     <div class="header">
         <h1>Web Algo UI</h1>
 
-        <div class="navigation">
+        <span class="navigation">
             <a href="/">Home</a>
             <a href="#">Help</a>
-        </div>
+        </span>
+
         <div class="algo_db_selection">
             <form name="algo_db_form" id="algo_db_form_id"
                   action="{{ url_for('show_algo_properties') }}" method="POST">
-                <select class="algo_select">
+                <select class="algo_select" name="algo_id">
                     {% for algorithm in algo_list %}
                         <option value="{{ algorithm.pk }}">{{ algorithm.name }}</option>
                     {% endfor %}
                 </select>
-                <select class="db_select">
+                <select class="db_select" name="db_id">
                     {% for db in db_list %}
                         <option value="{{ db.pk }}">{{ db.name }}</option>
                     {% endfor %}
                 </select>
-                <input type="submit" value="Go">
+                <input type="button" value="Go" id="algo_db_select_button">
             </form>
         </div>
     </div>
     {% block body %}{% endblock %}
 </div>
+{% block sctipts %}{% endblock %}
