--- a/webAlgoUI/templates/algo_db_settings.html
+++ b/webAlgoUI/templates/algo_db_settings.html
@@ -1,13 +1,39 @@
+<div id="db_settings_info">
+    <table>
+        <tr>
+            <td>Database settings</td>
+        </tr>
+        <tr>
+            <td>Detector type:</td>
+            <td>{{ db_settings.get('Detector Type') }}</td>
+        </tr>
+        <tr>
+            <td>Detector Settings:</td>
+            {% with detector_settings=db_settings.get('Detector Settings') %}
+                <td>
+                    <table>
+                        {% for detector_settings_key in detector_settings.keys() %}
+                            <tr>
+                                <td>{{ detector_settings_key }}:</td>
+                                <td>{{ detector_settings.get(detector_settings_key) }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </td>
+            {% endwith %}
+        </tr>
+    </table>
+</div>
 <form id="algo-form-id" name="algo-form" role="form" action="{{ url_for('run_algorithm', algo_id=algo_id) }}"
       method="post">
-    <div>
-    <label for="image_selector_id"> Select image to test.</label>
-    <select name="image_selector" id="image_selector_id" size="5">
-        {% for image in images %}
-            <option value={{ image }}>{{ image }}</option>
-        {% endfor %}
-    </select>
-    <img id="image_preview" src="" width="150px" height="150px">
+    <div id="image_selectot_block">
+        <label for="image_selector_id"> Select image to test.</label>
+        <select name="image_selector" id="image_selector_id" size="5">
+            {% for image in images %}
+                <option value={{ image }}>{{ image }}</option>
+            {% endfor %}
+        </select>
+        <img id="image_preview" src="" width="150px" height="150px">
     </div>
     <table>
         <tr>
@@ -96,7 +122,7 @@
             }
         });
     });
-    $('#image_selector_id').on('change', function(e){
+    $('#image_selector_id').on('change', function (e) {
         var selectedValue = $(e.currentTarget).val();
         console.log(selectedValue);
         $('#image_preview').attr('src', '{{ url_for('static', filename='media_images/') }}' + selectedValue);
