Changed page design, changed settings structure.

--- a/webAlgoUI/templates/algo_db_settings.html
+++ b/webAlgoUI/templates/algo_db_settings.html
@@ -1,110 +1,147 @@
-<div id="db_settings_info">
-    <table>
-        <tr>
-            <td>Database settings</td>
-        </tr>
-        <tr>
-            <td>Detector type:</td>
-            <td>{{ db_settings.get('Detector Type') }}</td>
-        </tr>
-        <tr>
-            <td>Detector Settings:</td>
-            {% with detector_settings=db_settings.get('Detector Settings') %}
-                <td>
-                    <table>
-                        {% for detector_settings_key in detector_settings.keys() %}
-                            <tr>
-                                <td>{{ detector_settings_key }}:</td>
-                                <td>{{ detector_settings.get(detector_settings_key) }}</td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                </td>
-            {% endwith %}
-        </tr>
-    </table>
-</div>
 <form id="algo-form-id" name="algo-form" role="form" action="{{ url_for('run_algorithm', algo_id=algo_id) }}"
       method="post">
-    <div id="image_selectot_block">
+    <p class="block_header_text">---=== Database settings ===---</p>
+
+    <div class="settings_header">
+        <table id="db_settings_table">
+            <tr>
+                <td>Detector type:</td>
+                <td>{{ db_settings.get('Detector Type') }}</td>
+            </tr>
+            <tr>
+                <td>Detector Settings:</td>
+                {% with detector_settings=db_settings.get('Detector Settings') %}
+                    <td>
+                        <table>
+                            {% for detector_settings_key in detector_settings.keys() %}
+                                <tr>
+                                    <td>{{ detector_settings_key }}:</td>
+                                    <td>{{ detector_settings.get(detector_settings_key) }}</td>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                    </td>
+                {% endwith %}
+            </tr>
+        </table>
         <label for="image_selector_id"> Select image to test.</label>
         <select name="image_selector" id="image_selector_id" size="5">
             {% for image in images %}
-                <option value={{ image }}>{{ image }}</option>
+                <option value="{{ image }}"
+                        {% if loop.index == 1 %}selected="selected"{% endif %}>{{ image }}</option>
             {% endfor %}
         </select>
-        <img id="image_preview" src="" width="150px" height="150px">
+        <img id="image_preview" src="">
     </div>
-    <table>
-        <tr>
-            {% if selects %}
-                <td>
-                    <label for="settings_selects">{{ selects.general_label }}
+    <p class="block_header_text">---=== Algorithm Settings ===---</p>
 
-                        <div id="settings_selects">
-                            {% for select in selects.elements %}
-                                <label for="select_{{ select.general_label | slugify }}">{{ select.general_label }}
-                                    <select id="select_{{ select.general_label | slugify }}"
-                                            name="select_{{ select.general_label | slugify }}">
-                                        {% for option in select.options %}
-                                            <option value="{{ option.value }}"
-                                                    {% if option.value == select.default_value %}
-                                                    selected="selected" {% endif %}>{{ option.label }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </label>
-                            {% endfor %}
-                        </div>
-                    </label>
-                </td>
+    <div class="settings_body">
+        <table>
+            {% if selects is defined %}
+                <tr>
+                    <td class="settings_block_caption">
+                        {{ selects.general_label }}
+                    </td>
+                </tr>
+                <tr>
+                    {% for select in selects.elements %}
+                        <td>
+                            <label for="select_{{ select.general_label | slugify }}">{{ select.general_label }}
+                                <select id="select_{{ select.general_label | slugify }}"
+                                        name="select_{{ select.general_label | slugify }}">
+                                    {% for option in select.options %}
+                                        <option value="{{ option.value }}"
+                                                {% if option.value == select.default_value %}
+                                                selected="selected" {% endif %}>{{ option.label }}</option>
+                                    {% endfor %}
+                                </select>
+                            </label>
+                        </td>
+                        {% if not loop.last and loop.index is divisibleby 2 %}
+                            </tr>
+                            <tr>
+                        {% endif %}
+                    {% endfor %}
+
+                    </tr>
             {% endif %}
-            <td>
-                {% if inputs %}
-                    <label for="settings_inputs">{{ inputs.general_label }}
-                        <div id="settings_inputs">
-                            {% for input in inputs.elements %}
-                                <label for="input_{{ input.label | slugify }}">{{ input.label }}:
-                                    <input type="text" id="input_{{ input.label | slugify }}"
-                                           value="{{ input.default_value }}"></label>
-                            {% endfor %}
-                        </div>
-                    </label>
-                {% endif %}
-            </td>
-            <td>
-                {% if checkboxes %}
-                    <label for="settings_checkboxes">{{ checkboxes.general_label }}
-                        <div id="settings_checkboxes">
-                            {% for checkbox in checkboxes.elements %}
-                                <label for="checkbox_{{ checkbox.label | slugify }}">
-                                    <input type="checkbox" id="checkbox_{{ checkbox.label | slugify }}"
-                                           {% if checkbox.default_value %}checked="checked" {% endif %}>{{ checkbox.label }}
-                                </label>
-                            {% endfor %}
-                        </div>
-                    </label>
-                {% endif %}
-            </td>
-            <td>
-                {% if radiobuttons %}
-                    <label for="settings_radiobuttons">{{ radiobuttons.general_label }}
-                        <div id="settings_radiobuttons">
-                            {% for radio_button in radiobuttons.elements %}
-                                <label for="radio_{{ radio_button | slugify }}">
-                                    <input type="radio" id="radio_{{ radio_button | slugify }}"
-                                           {% if radio_button == radiobuttons.default_value %}checked="checked" {% endif %}>{{ radio_button }}
-                                </label>
-                            {% endfor %}
-                        </div>
-                    </label>
-                {% endif %}
-            </td>
-        </tr>
-    </table>
-    <input type="button" id="run_algo_button" value="Run Algorithm">
+
+            {% if inputs is defined %}
+                <tr>
+                    <td class="settings_block_caption">
+                        {{ inputs.general_label }}
+                    </td>
+                </tr>
+                <tr>
+                    {% for input in inputs.elements %}
+                        <td>
+                            <label for="input_{{ input.label | slugify }}">{{ input.label }}:
+                                <input type="text" id="input_{{ input.label | slugify }}"
+                                       value="{{ input.default_value }}"
+                                       name=input_{{ input.label | slugify }}"></label>
+                        </td>
+                        {% if not loop.last and loop.index is divisibleby 2 %}
+                            </tr>
+                            <tr>
+                        {% endif %}
+                    {% endfor %}
+
+                    </tr>
+            {% endif %}
+            {% if checkboxes is defined %}
+                <tr>
+                    <td class="settings_block_caption">
+                        {{ checkboxes.general_label }}
+                    </td>
+                </tr>
+                <tr>
+                    {% for checkbox in checkboxes.elements %}
+                        <td>
+                            <label for="checkbox_{{ checkbox.label | slugify }}">
+                                <input type="checkbox" id="checkbox_{{ checkbox.label | slugify }}"
+                                       name="checkbox_{{ checkbox.label | slugify }}"
+                                       {% if checkbox.default_value %}checked="checked" {% endif %}>{{ checkbox.label }}
+                            </label>
+                        </td>
+                        {% if not loop.last and loop.index is divisibleby 2 %}
+                            </tr>
+                            <tr>
+                        {% endif %}
+                    {% endfor %}
+
+                    </tr>
+            {% endif %}
+            {% if radiobuttons is defined %}
+                <tr>
+                    <td class="settings_block_caption"> {{ radiobuttons.general_label }}</td>
+                </tr>
+                <tr>
+                    {% for radio_button in radiobuttons.elements %}
+                        <td>
+                            <label for="radio_{{ radio_button | slugify }}">
+                                <input type="radio" id="radio_{{ radio_button | slugify }}"
+                                       name="radio_{{ radiobuttons.general_label | slugify }}"
+                                       {% if radio_button == radiobuttons.default_value %}checked="checked" {% endif %}>{{ radio_button }}
+                            </label>
+                        </td>
+                        {% if not loop.last and loop.index is divisibleby 2 %}
+                            </tr>
+                            <tr>
+                        {% endif %}
+                    {% endfor %}
+
+                    </tr>
+            {% endif %}
+        </table>
+    </div>
+    <div class="buttons_block">
+        <input type="button" id="run_algo_button" value="Run Algorithm">
+    </div>
 </form>
 <script>
     $('#settings_caption').text('Selected algorithm ID: {{ algo_id }}, DB ID: {{ db_id }}');
+    var image_selector = $('#image_selector_id');
+    $('#image_preview').attr('src', '{{ url_for('static', filename='media_images/') }}' + image_selector.val());
     $('#run_algo_button').on('click', function (e) {
         e.preventDefault();
         $('#settings_caption').text('Running algorithm...');
@@ -122,7 +159,7 @@
             }
         });
     });
-    $('#image_selector_id').on('change', function (e) {
+    image_selector.on('change', function (e) {
         var selectedValue = $(e.currentTarget).val();
         console.log(selectedValue);
         $('#image_preview').attr('src', '{{ url_for('static', filename='media_images/') }}' + selectedValue);
