--- a/webAlgoUI/templates/algo_db_settings.html
+++ b/webAlgoUI/templates/algo_db_settings.html
@@ -1,4 +1,5 @@
-<form id="algo-form-id" name="algo-form" role="form" action="{{ url_for('run_algorithm', algo_id=algo_id, db_id=db_id) }}"
+<form id="algo-form-id" name="algo-form" role="form"
+      action="{{ url_for('run_algorithm', algo_id=algo_id, db_id=db_id) }}"
       method="post">
     <p class="block_header_text">---=== Database settings ===---</p>
 
@@ -159,17 +160,23 @@
         });
     });
     var person_selector = $('#person_selector_id');
-    if(person_selector){
+    if (person_selector) {
+        get_images();
+        person_selector.on('change', function () {
+            get_images();
+        });
+    }
+    function get_images() {
         $.ajax({
             url: '{{ url_for('get_person_images') }}',
             data: {
                 'person': person_selector.val()
             },
             type: 'post',
-            success: function(response) {
+            success: function (response) {
                 $('#image_selector_html').html(response);
             },
-            error: function(error){
+            error: function (error) {
                 console.log(error);
             }
         });
