changes color to background-color.

--- a/webAlgoUI/templates/algo_db_settings.html
+++ b/webAlgoUI/templates/algo_db_settings.html
@@ -211,7 +211,7 @@
         for (var i = 0; i < texts.length; i++) {
             var currentP = $(texts[i]);
             if(currentP.attr('data-color')){
-                currentP.css('color', 'rgb(' + currentP.attr('data-color') + ')');
+                currentP.css('background-color', 'rgb(' + currentP.attr('data-color') + ')');
             }
         }
     }
